{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 54,
  "lineage": "2afff57d-ee25-cc88-8cc6-6375182d1354",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0194c6619f38b3913",
            "association_id": "eipassoc-062eed00c93d31b19",
            "domain": "vpc",
            "id": "eipalloc-0194c6619f38b3913",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-027d252ef796bf0b7",
            "private_dns": "ip-10-1-0-159.ap-south-1.compute.internal",
            "private_ip": "10.1.0.159",
            "public_dns": "ec2-3-109-36-246.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.36.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nani-petclinic-natIp"
            },
            "tags_all": {
              "Name": "nani-petclinic-natIp"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bf4ae5a7909786c",
            "arn": "arn:aws:ec2:ap-south-1:705132973807:instance/i-01207f23f2b6b2fb1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01207f23f2b6b2fb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinic-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc8ba6f64c471746",
            "private_dns": "ip-10-1-0-211.ap-south-1.compute.internal",
            "private_ip": "10.1.0.211",
            "public_dns": "ec2-13-233-140-155.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.140.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2cfd7158044873c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-086a4161b95f0e355"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ea6c7176e35c347",
            "tags": {
              "Name": "nani-petclinic-tomcat"
            },
            "tags_all": {
              "Name": "nani-petclinic-tomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-086a4161b95f0e355"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinic",
            "aws_security_group.tomcat-security-group",
            "aws_subnet.pubsubnet",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:internet-gateway/igw-05dc16ce8e4792592",
            "id": "igw-05dc16ce8e4792592",
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-igw"
            },
            "tags_all": {
              "Name": "nani-petclinic-igw"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0194c6619f38b3913",
            "connectivity_type": "public",
            "id": "nat-020ea0ba8fd2abedd",
            "network_interface_id": "eni-027d252ef796bf0b7",
            "private_ip": "10.1.0.159",
            "public_ip": "3.109.36.246",
            "subnet_id": "subnet-09ea6c7176e35c347",
            "tags": {
              "Name": "nani-petclinic-natGw"
            },
            "tags_all": {
              "Name": "nani-petclinic-natGw"
            }
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataeroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:route-table/rtb-0aeb83b23f7d08b88",
            "id": "rtb-0aeb83b23f7d08b88",
            "owner_id": "705132973807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-020ea0ba8fd2abedd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nani-petclinic-dataroute"
            },
            "tags_all": {
              "Name": "nani-petclinic-dataroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:route-table/rtb-0a098bc7819ddd075",
            "id": "rtb-0a098bc7819ddd075",
            "owner_id": "705132973807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-020ea0ba8fd2abedd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nani-petclinic-privateroute"
            },
            "tags_all": {
              "Name": "nani-petclinic-privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:route-table/rtb-00eb12594d2493edd",
            "id": "rtb-00eb12594d2493edd",
            "owner_id": "705132973807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dc16ce8e4792592",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nani-petclinic-publicroute"
            },
            "tags_all": {
              "Name": "nani-petclinic-publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasubassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048407a12fb5707ae",
            "route_table_id": "rtb-0aeb83b23f7d08b88",
            "subnet_id": "subnet-09335449390ffa7ce"
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.dataeroute",
            "aws_subnet.datasubnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c05e4d56db01b94a",
            "route_table_id": "rtb-0aeb83b23f7d08b88",
            "subnet_id": "subnet-0872a13cd907d1592"
          },
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.dataeroute",
            "aws_subnet.datasubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d07414a911b8c1",
            "route_table_id": "rtb-0aeb83b23f7d08b88",
            "subnet_id": "subnet-03c94d2caa5b64be8"
          },
          "dependencies": [
            "aws_subnet.datasubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.dataeroute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisubassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe46aac5190c9bbb",
            "route_table_id": "rtb-0a098bc7819ddd075",
            "subnet_id": "subnet-0e1eedb08871c8b39"
          },
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b244b50f5735c73",
            "route_table_id": "rtb-0a098bc7819ddd075",
            "subnet_id": "subnet-04a6f6384aa1a9ac6"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f473873b3c2353e",
            "route_table_id": "rtb-0a098bc7819ddd075",
            "subnet_id": "subnet-0cac7978ebc1a7a6e"
          },
          "dependencies": [
            "aws_eip.natIp",
            "aws_nat_gateway.natGw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a630e52645ece16",
            "route_table_id": "rtb-00eb12594d2493edd",
            "subnet_id": "subnet-09ea6c7176e35c347"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0964ac7af41d50834",
            "route_table_id": "rtb-00eb12594d2493edd",
            "subnet_id": "subnet-0a95daa23078d1c91"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0995d7dbaff86c6",
            "route_table_id": "rtb-00eb12594d2493edd",
            "subnet_id": "subnet-0c4de57422443f495"
          },
          "dependencies": [
            "aws_vpc.petclinic",
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:security-group/sg-0b2f84d22511c5cb6",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2f84d22511c5cb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "705132973807",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nani-petclinic-alb-sg"
            },
            "tags_all": {
              "Name": "nani-petclinic-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:security-group/sg-086a4161b95f0e355",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086a4161b95f0e355",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat-security-group",
            "name_prefix": "",
            "owner_id": "705132973807",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-09335449390ffa7ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-09335449390ffa7ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-datasubnets t-1"
            },
            "tags_all": {
              "Name": "nani-petclinic-datasubnets t-1"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-0872a13cd907d1592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0872a13cd907d1592",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-datasubnets t-2"
            },
            "tags_all": {
              "Name": "nani-petclinic-datasubnets t-2"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-03c94d2caa5b64be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-03c94d2caa5b64be8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-datasubnets t-3"
            },
            "tags_all": {
              "Name": "nani-petclinic-datasubnets t-3"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-0e1eedb08871c8b39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e1eedb08871c8b39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-privatesunet-1"
            },
            "tags_all": {
              "Name": "nani-petclinic-privatesunet-1"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-04a6f6384aa1a9ac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-04a6f6384aa1a9ac6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-privatesunet-2"
            },
            "tags_all": {
              "Name": "nani-petclinic-privatesunet-2"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-0cac7978ebc1a7a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0cac7978ebc1a7a6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-privatesunet-3"
            },
            "tags_all": {
              "Name": "nani-petclinic-privatesunet-3"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-09ea6c7176e35c347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-09ea6c7176e35c347",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-pubsunet-1"
            },
            "tags_all": {
              "Name": "nani-petclinic-pubsunet-1"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-0a95daa23078d1c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0a95daa23078d1c91",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-pubsunet-2"
            },
            "tags_all": {
              "Name": "nani-petclinic-pubsunet-2"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:subnet/subnet-0c4de57422443f495",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0c4de57422443f495",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic-pubsunet-3"
            },
            "tags_all": {
              "Name": "nani-petclinic-pubsunet-3"
            },
            "vpc_id": "vpc-009b3f4a09379f968"
          },
          "dependencies": [
            "aws_vpc.petclinic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:705132973807:vpc/vpc-009b3f4a09379f968",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0634b655f02aa916b",
            "default_route_table_id": "rtb-039afb3a91e024910",
            "default_security_group_id": "sg-0753ebd560745a62b",
            "dhcp_options_id": "dopt-0f6ac55ff15a3303b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009b3f4a09379f968",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039afb3a91e024910",
            "owner_id": "705132973807",
            "tags": {
              "Name": "nani-petclinic"
            },
            "tags_all": {
              "Name": "nani-petclinic"
            }
          }
        }
      ]
    }
  ]
}